--- a/Proyecto_GPI/src/Ventanas/Inicio.form
+++ b/Proyecto_GPI/src/Ventanas/Inicio.form
@@ -64,7 +64,7 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace pref="24" max="32767" attributes="0"/>
                       <Component id="jLabel9" min="-2" pref="329" max="-2" attributes="0"/>
-                      <EmptySpace pref="-26" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
               <Group type="103" groupAlignment="0" attributes="0">
